--- a/config/.eslintrc.json
+++ b/config/.eslintrc.json
@@ -4,33 +4,33 @@
     "jest/globals": true
   },
   "extends": [
-    "standard",
-    "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:jsdoc/recommended",
-    "plugin:jest/recommended"
+    "plugin:jest/recommended",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "jest"],
+  "plugins": ["@typescript-eslint", "jest", "prettier"],
   "rules": {
-    "@typescript-eslint/explicit-function-return-type": "error",
-    "@typescript-eslint/no-implicit-any-catch": "error",
-    "@typescript-eslint/prefer-for-of": "error",
-    "@typescript-eslint/prefer-function-type": "error",
-    "@typescript-eslint/prefer-includes": "error",
-    "@typescript-eslint/prefer-nullish-coalescing": "error",
-    "@typescript-eslint/prefer-optional-chain": "error",
-    "@typescript-eslint/prefer-readonly": "error",
-    "@typescript-eslint/prefer-string-starts-ends-with": "error",
-    "jsdoc/check-indentation": "error",
-    "jsdoc/check-line-alignment": "error",
-    "jsdoc/require-description-complete-sentence": "error",
-    "jsdoc/require-hyphen-before-param-description": "error"
+    // "@typescript-eslint/explicit-function-return-type": "error",
+    // "@typescript-eslint/no-implicit-any-catch": "error",
+    // "@typescript-eslint/prefer-for-of": "error",
+    // "@typescript-eslint/prefer-function-type": "error",
+    // "@typescript-eslint/prefer-includes": "error",
+    // "@typescript-eslint/prefer-nullish-coalescing": "error",
+    // "@typescript-eslint/prefer-optional-chain": "error",
+    // "@typescript-eslint/prefer-readonly": "error",
+    // "@typescript-eslint/prefer-string-starts-ends-with": "error",
+    // "jsdoc/check-indentation": "error",
+    // "jsdoc/check-line-alignment": "error",
+    // "jsdoc/require-description-complete-sentence": "error",
+    // "jsdoc/require-hyphen-before-param-description": "error"
   }
 }
