--- a/config/.eslintrc.json
+++ b/config/.eslintrc.json
@@ -17,20 +17,25 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "jest", "prettier"],
+  "plugins": ["@typescript-eslint", "jest", "prettier", "jsdoc"],
   "rules": {
-    // "@typescript-eslint/explicit-function-return-type": "error",
-    // "@typescript-eslint/no-implicit-any-catch": "error",
-    // "@typescript-eslint/prefer-for-of": "error",
-    // "@typescript-eslint/prefer-function-type": "error",
-    // "@typescript-eslint/prefer-includes": "error",
-    // "@typescript-eslint/prefer-nullish-coalescing": "error",
-    // "@typescript-eslint/prefer-optional-chain": "error",
-    // "@typescript-eslint/prefer-readonly": "error",
-    // "@typescript-eslint/prefer-string-starts-ends-with": "error",
-    // "jsdoc/check-indentation": "error",
-    // "jsdoc/check-line-alignment": "error",
-    // "jsdoc/require-description-complete-sentence": "error",
-    // "jsdoc/require-hyphen-before-param-description": "error"
+    "no-unused-vars": 1,
+    "sort-imports": [1, { "ignoreDeclarationSort": true }],
+    "@typescript-eslint/no-non-null-assertion": 1,
+    "@typescript-eslint/no-var-requires": 1,
+    "@typescript-eslint/explicit-function-return-type": 2,
+    "@typescript-eslint/no-implicit-any-catch": 2,
+    "@typescript-eslint/prefer-for-of": 2,
+    "@typescript-eslint/prefer-function-type": 2,
+    "@typescript-eslint/prefer-includes": 2,
+    "@typescript-eslint/prefer-nullish-coalescing": 2,
+    "@typescript-eslint/prefer-optional-chain": 2,
+    "@typescript-eslint/prefer-readonly": 2,
+    "@typescript-eslint/prefer-string-starts-ends-with": 2,
+    "jsdoc/require-jsdoc": 2,
+    "jsdoc/check-indentation": 2,
+    "jsdoc/check-line-alignment": 2,
+    "jsdoc/require-description-complete-sentence": 2,
+    "jsdoc/require-hyphen-before-param-description": 2
   }
 }
