--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "ESNext",
     "lib": ["es6"],
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
